--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -246,8 +246,11 @@
                 </div>
                 <div class="blog-text">
                   <h4>
-                                          <a href="blog.html">Animal Project</a>
+                      <a href="blog.html">Animal Project</a>
                     </h4>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                  </div>
                   <p>
                     Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
                   </p>
@@ -278,8 +281,11 @@
                   </div>
                   <div class="blog-text">
                     <h4>
-                                            <a href="blog.html">Disability Project</a>
-                      </h4>
+                        <a href="blog.html">Disability Project</a>
+                    </h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                    </div>
                     <p>
                       Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
                     </p>
@@ -310,8 +316,11 @@
                   </div>
                   <div class="blog-text">
                     <h4>
-                                            <a href="blog.html">Education Porject</a>
-                      </h4>
+                        <a href="blog.html">Education Porject</a>
+                    </h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                    </div>
                     <p>
                       Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
                     </p>
@@ -323,7 +332,6 @@
                 <!-- Start single blog -->
               </div>
               <!-- End Left Blog-->
-  
   
           </div>
         </div>
@@ -337,7 +345,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>About eBusiness</h2>
+            <h2>About Transact</h2>
           </div>
         </div>
       </div>
