--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -516,7 +516,7 @@
     <div class="test-overly"></div>
     <div class="skill-bg area-padding-2">
       <div class="container">
-        <!-- section-heading end -->
+        <!section-heading end -->
         <!-- <div class="row">
           <div class="skill-text"> -->
             <!-- single-skill start -->
@@ -692,8 +692,8 @@
               <div class="single-icon">
                 <i class="fa fa-map-marker"></i>
                 <p>
-                  Location: A108 Adam Street<br>
-                  <span>NY 535022, USA</span>
+                  Location: 21 Kent Ridge<br>
+                  <span>NY 510000,Singapore </span>
                 </p>
               </div>
             </div>
