--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -79,7 +79,9 @@
                   <li>
                     <a class="page-scroll" href="#about">About</a>
                   </li>
-          
+                  <li>
+                    <a href="my-profile.html">My Profile</a>
+                  </li>
                   <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                   </li>
