--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -172,7 +172,7 @@
                                     <li>
                                         <a class="page-scroll" href="#about">About</a>
                                     </li>
-                                    <li>
+                               <!--      <li>
                                         <a class="page-scroll" href="#services">Services</a>
                                     </li>
                                     <li>
@@ -183,10 +183,14 @@
                                     </li>
                                     <li>
                                         <a class="page-scroll" href="#blog">Blog</a>
+                                    </li> -->
+                                    <li>
+                                        <a href="my-profile.html">My Profile</a>
                                     </li>
                                     <li>
                                         <a class="page-scroll" href="#contact">Contact</a>
                                     </li>
+
                                 </ul>
                             </div>
                             <!-- navbar-collapse -->
