--- a/donation-web/blog-details.html
+++ b/donation-web/blog-details.html
@@ -118,6 +118,9 @@
                     <a class="page-scroll" href="#blog">Blog</a>
                   </li> -->
                   <li>
+                    <a href="my-profile.html">My Profile</a>
+                  </li>
+                  <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                 </ul>
