--- a/donation-web/blog.html
+++ b/donation-web/blog.html
@@ -79,7 +79,7 @@
                   <li>
                     <a class="page-scroll" href="#about">About</a>
                   </li>
-                  <li>
+                 <!--  <li>
                     <a class="page-scroll" href="#services">Services</a>
                   </li>
                   <li>
@@ -90,6 +90,9 @@
                   </li>
                   <li>
                     <a class="page-scroll" href="#blog">Blog</a>
+                  </li> -->
+                  <li>
+                    <a href="my-profile.html">My Profile</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#contact">Contact</a>
