--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -288,7 +288,10 @@
                                             </div>
                                             
                                             <div class="progress">
-                                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Fundraising 100% completed.</div>
+                                            </div>
+                                            <div class="progress">
+                                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 40%; background-color: green;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"> Budget 40% claimed.</div>
                                             </div>
                                             <h5>You have contributed <strong style="color: rgb(14, 78, 218)">20</strong> dollars!</h5>
                                             <p style="margin: 0">
