--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -167,11 +167,11 @@
                             <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a href=index.html>Home</a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a class="page-scroll" href="#about">About</a>
-                                    </li>
+                                    </li> -->
                                <!--      <li>
                                         <a class="page-scroll" href="#services">Services</a>
                                     </li>
@@ -187,9 +187,9 @@
                                     <li>
                                         <a href="my-profile.html">My Profile</a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a class="page-scroll" href="#contact">Contact</a>
-                                    </li>
+                                    </li> -->
 
                                 </ul>
                             </div>
@@ -250,7 +250,7 @@
                                     border-width: thin; border-color: lightblue; padding: 15px; ">
                                         <div class="blog-text">
                                             <h4>
-                                                <a href="blog.html">Animal Project - Donation Ongoing</a>
+                                                <a >Animal Project - Donation Ongoing</a>
                                             </h4>
                                             <div >
                                                 <span class="comments-type">
@@ -266,16 +266,16 @@
                                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                                             </div>
                                             <h5>You have contributed <strong style="color: rgb(14, 78, 218)">10</strong> dollars!</h5>
-                                            <p style="margin: 0">
+                                            <!-- <p style="margin: 0">
                                                 Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
-                                            </p>
+                                            </p> -->
                                         </div>
                                     </div>
                                     <div class="single-blog education" style=" border-style: solid; 
                                     border-width: thin; border-color: lightblue; padding: 15px; ">
                                         <div class="blog-text">
                                             <h4>
-                                                <a href="blog.html">Education Project - Project Ongoing</a>
+                                                <a href="blog-details.html">Education Project - Project Ongoing</a>
                                             </h4>
                                             <div >
                                                 <span class="comments-type">
@@ -294,9 +294,9 @@
                                                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 40%; background-color: green;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"> Budget 40% claimed.</div>
                                             </div>
                                             <h5>You have contributed <strong style="color: rgb(14, 78, 218)">20</strong> dollars!</h5>
-                                            <p style="margin: 0">
+                                           <!--  <p style="margin: 0">
                                                 Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
-                                            </p>
+                                            </p> -->
                                         </div>
                                     </div>
                             </div>
