--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -102,8 +102,8 @@
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
-        <img src="img/slider/slider1.jpg" alt="" title="#slider-direction-1" />
-        <img src="img/slider/slider3.jpg" alt="" title="#slider-direction-3" />
+        <img src="img/slider/background1.jpg" alt="" title="#slider-direction-1" />
+        <img src="img/slider/background2.png" alt="" title="#slider-direction-3" />
       </div>
 
       <!-- direction 1 -->
@@ -221,8 +221,8 @@
             <div class="col-md-4 col-sm-4 col-xs-12 animal">
               <div class="single-blog">
                 <div class="single-blog-img">
-                  <a href="blog.html">
-                      <img src="img/blog/1.jpg" alt="">
+                  <a >
+                      <img src="img/blog/Animals.png" alt="">
                     </a>
                 </div>
                 <div class="blog-meta">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="blog-text">
                   <h4>
-                      <a href="blog.html">Animal Project</a>
+                      <a >Animal Project</a>
                     </h4>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
@@ -246,7 +246,7 @@
                   </p>
                 </div>
                 <span>
-                    <a href="blog.html" class="ready-btn">Know Project Better</a>
+                    <a  class="ready-btn">Know Project Better</a>
                   </span>
               </div>
               <!-- Start single blog -->
@@ -256,8 +256,8 @@
             <div class="col-md-4 col-sm-4 col-xs-12 disability">
                 <div class="single-blog">
                   <div class="single-blog-img">
-                    <a href="blog.html">
-                        <img src="img/blog/1.jpg" alt="">
+                    <a >
+                        <img src="img/blog/Disability.jpg" alt="">
                       </a>
                   </div>
                   <div class="blog-meta">
@@ -271,7 +271,7 @@
                   </div>
                   <div class="blog-text">
                     <h4>
-                        <a href="blog.html">Disability Project</a>
+                        <a >Disability Project</a>
                     </h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
@@ -281,7 +281,7 @@
                     </p>
                   </div>
                   <span>
-                      <a href="blog.html" class="ready-btn">Know Project Better</a>
+                      <a  class="ready-btn">Know Project Better</a>
                     </span>
                 </div>
                 <!-- Start single blog -->
@@ -291,8 +291,8 @@
             <div class="col-md-4 col-sm-4 col-xs-12 education">
                 <div class="single-blog">
                   <div class="single-blog-img">
-                    <a href="blog.html">
-                        <img src="img/blog/1.jpg" alt="">
+                    <a href="blog-details.html">
+                        <img src="img/blog/Education.jpg" alt="">
                       </a>
                   </div>
                   <div class="blog-meta">
@@ -306,7 +306,7 @@
                   </div>
                   <div class="blog-text">
                     <h4>
-                        <a href="blog.html">Education Porject</a>
+                        <a href="blog-details.html">Education Porject</a>
                     </h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
@@ -316,7 +316,7 @@
                     </p>
                   </div>
                   <span>
-                      <a href="blog.html" class="ready-btn">Know Project Better</a>
+                      <a href="blog-details.html" class="ready-btn">Know Project Better</a>
                     </span>
                 </div>
                 <!-- Start single blog -->
@@ -345,7 +345,7 @@
           <div class="well-left">
             <div class="single-well">
               <a href="#">
-                  <img src="img/about/1.jpg" alt="">
+                  <img src="img/blog/TRANSAC.png" alt="">
                 </a>
             </div>
           </div>
@@ -753,7 +753,7 @@
             <div class="footer-content">
               <div class="footer-head">
                 <div class="footer-logo">
-                  <h2><span>e</span>Business</h2>
+                  <h2><span>TRANS</span>ACT</h2>
                 </div>
 
                 <p>This is where the donors, charitable organisations and their beneficiaries can co-exist with the full assurance of transparency and trust that is made possible with blockchain technology.</p>
@@ -795,12 +795,12 @@
               <div class="footer-head">
                 <h4>Instagram</h4>
                 <div class="flicker-img">
-                  <a href="#"><img src="img/portfolio/1.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/2.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/3.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/4.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/5.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/6.jpg" alt=""></a>
+                   <a href="#"><img src="img/portfolio/Charity1.jpg" alt=""></a>
+                                    <a href="#"><img src="img/portfolio/Charity2.jpg" alt=""></a>
+                                    <a href="#"><img src="img/portfolio/Charity3.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Animals.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Disability.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Education.jpg" alt=""></a>
                 </div>
               </div>
             </div>
