--- a/donation-web/blog-details.html
+++ b/donation-web/blog-details.html
@@ -404,7 +404,7 @@
                   <h2><span>TRANS</span>ACT</h2>
                 </div>
 
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                <p>This is where the donors, charitable organisations and their beneficiaries can co-exist with the full assurance of transparency and trust that is made possible with blockchain technology.</p>
                 <div class="footer-icons">
                   <ul>
                     <li>
@@ -429,9 +429,9 @@
             <div class="footer-content">
               <div class="footer-head">
                 <h4>information</h4>
-                <p>
+                <!-- <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                </p>
+                </p> -->
                 <div class="footer-contacts">
                   <p><span>Tel:</span> +123 456 789</p>
                   <p><span>Email:</span> contact@example.com</p>
@@ -446,12 +446,12 @@
               <div class="footer-head">
                 <h4>Instagram</h4>
                 <div class="flicker-img">
-                  <a href="#"><img src="img/portfolio/1.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/2.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/3.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/4.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/5.jpg" alt=""></a>
-                  <a href="#"><img src="img/portfolio/6.jpg" alt=""></a>
+                   <a href="#"><img src="img/portfolio/Charity1.jpg" alt=""></a>
+                                    <a href="#"><img src="img/portfolio/Charity2.jpg" alt=""></a>
+                                    <a href="#"><img src="img/portfolio/Charity3.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Animals.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Disability.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Education.jpg" alt=""></a>
                 </div>
               </div>
             </div>
