--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -65,7 +65,7 @@
                   </button>
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
-                  <h1><span>TRANSAC</span>ACT</h1>
+                  <h1><span>TRANS</span>ACT</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                   <!-- <img src="img/logo.png" alt="" title=""> -->
                 </a>
@@ -231,7 +231,7 @@
                       <a href="#">50,000</a>
                     </span>
                   <span class="date-type">
-                      <i class="fa fa-calendar"></i>2016-03-05 / 09:10:16
+                      <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
                     </span>
                 </div>
                 <div class="blog-text">
@@ -266,7 +266,7 @@
                         <a href="#">50,000</a>
                       </span>
                     <span class="date-type">
-                        <i class="fa fa-calendar"></i>2016-03-05 / 09:10:16
+                        <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
                       </span>
                   </div>
                   <div class="blog-text">
@@ -301,12 +301,12 @@
                         <a href="#">50,000</a>
                       </span>
                     <span class="date-type">
-                        <i class="fa fa-calendar"></i>2016-03-05 / 09:10:16
+                        <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
                       </span>
                   </div>
                   <div class="blog-text">
                     <h4>
-                        <a href="blog-details.html">Education Porject</a>
+                        <a href="blog-details.html">Education Project</a>
                     </h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
@@ -355,26 +355,23 @@
           <div class="well-middle">
             <div class="single-well">
               <a href="#">
-                <h4 class="sec-head">project Maintenance</h4>
+                <h4 class="sec-head">Our methodology</h4>
               </a>
               <p>
-                Redug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure aspernatur sit adipisci quaerat unde at nequeRedug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure
+                With Ethereum blockchain, charities first create project accounts which are identified with a hashcode. The new Visibility Guide framework introduced by the Commissioner of Charities (COC) will be utilised to ensure accounts are indeed legitimate. Donors will hence be able to donate with more confidence. 
+              </p>
+              <p>
+                To assure donors that their money is spent on the right items, the money used by the charities have to be recorded on the blockchain as well. We require the charities to send us the invoices or receipts of their various purchases, and then process these invoices and subsequently store them as a string value within a smart contract.
               </p>
               <ul>
                 <li>
-                  <i class="fa fa-check"></i> Interior design Package
+                  <i class="fa fa-check"></i> Address transparency issue
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Building House
+                  <i class="fa fa-check"></i> Enhance accountability of donors funds 
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Reparing of Residentail Roof
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Renovaion of Commercial Office
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Make Quality Products
+                  <i class="fa fa-check"></i> Aids audit trailing 
                 </li>
               </ul>
             </div>
@@ -565,7 +562,7 @@
         </div>
       </div>
     </div>
-  </div> --> -->
+  </div> --> 
   <!-- our-skill-area end -->
 
   <!-- Start reviews Area -->
@@ -629,7 +626,7 @@
             <!--   </div> -->
            <!--  </div> -->
             <!-- End testimonials end -->
-         <!--  </div> --> -->
+         <!--  </div> --> 
           <!-- End Right Feature -->
     <!--     </div>
       </div>
@@ -798,7 +795,7 @@
                    <a href="#"><img src="img/portfolio/Charity1.jpg" alt=""></a>
                                     <a href="#"><img src="img/portfolio/Charity2.jpg" alt=""></a>
                                     <a href="#"><img src="img/portfolio/Charity3.jpg" alt=""></a>
-                                    <a href="#"><img src="img/blog/Animals.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Animals.png" alt=""></a>
                                     <a href="#"><img src="img/blog/Disability.jpg" alt=""></a>
                                     <a href="#"><img src="img/blog/Education.jpg" alt=""></a>
                 </div>
