--- a/donation-web/blog-details.html
+++ b/donation-web/blog-details.html
@@ -449,7 +449,7 @@
                    <a href="#"><img src="img/portfolio/Charity1.jpg" alt=""></a>
                                     <a href="#"><img src="img/portfolio/Charity2.jpg" alt=""></a>
                                     <a href="#"><img src="img/portfolio/Charity3.jpg" alt=""></a>
-                                    <a href="#"><img src="img/blog/Animals.jpg" alt=""></a>
+                                    <a href="#"><img src="img/blog/Animals.png" alt=""></a>
                                     <a href="#"><img src="img/blog/Disability.jpg" alt=""></a>
                                     <a href="#"><img src="img/blog/Education.jpg" alt=""></a>
                 </div>
