--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -166,7 +166,7 @@
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li class="active">
+                                    <li >
                                         <a href=index.html>Home</a>
                                     </li>
                                     <!-- <li>
@@ -184,7 +184,7 @@
                                     <li>
                                         <a class="page-scroll" href="#blog">Blog</a>
                                     </li> -->
-                                    <li>
+                                    <li class="active">
                                         <a href="my-profile.html">My Profile</a>
                                     </li>
                                     <!-- <li>
@@ -247,7 +247,7 @@
                             </div>
                             <div class="awesome-project-content">
                                     <div class="single-blog animal" style=" border-style: solid; 
-                                    border-width: thin; border-color: lightblue; padding: 15px; ">
+                                    border-width: thin; border-color: lightblue; padding: 15px; width: -webkit-fill-available;">
                                         <div class="blog-text">
                                             <h4>
                                                 <a >Animal Project - Donation Ongoing</a>
@@ -263,7 +263,7 @@
                                             </div>
                                             
                                             <div class="progress">
-                                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Fundraising 75% ongoing.</div>
                                             </div>
                                             <h5>You have contributed <strong style="color: rgb(14, 78, 218)">10</strong> dollars!</h5>
                                             <!-- <p style="margin: 0">
@@ -272,10 +272,10 @@
                                         </div>
                                     </div>
                                     <div class="single-blog education" style=" border-style: solid; 
-                                    border-width: thin; border-color: lightblue; padding: 15px; ">
+                                    border-width: thin; border-color: lightblue; padding: 15px; width: -webkit-fill-available;">
                                         <div class="blog-text">
                                             <h4>
-                                                <a href="blog-details.html">Education Project - Project Ongoing</a>
+                                                <a href="blog-ongoing-details.html">Education Project - Project Ongoing</a>
                                             </h4>
                                             <div >
                                                 <span class="comments-type">
@@ -330,8 +330,8 @@
                     border-width: thin; border-color: lightblue; padding: 15px;">
                         <h3 style="margin:0">Education Enhancement in SEA</h3>
                         <div class="progress" style="margin-bottom: 2px; margin-top: 20px">
-                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 24%"
-                                aria-valuenow="24" aria-valuemin="0" aria-valuemax="100">24%</div>
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%"
+                                aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
                         </div>
                         <div style="font-weight: 800; text-align: right;">20 more days</div>
                         <p style="margin: 0">
