--- a/donation-web/blog-details.html
+++ b/donation-web/blog-details.html
@@ -312,7 +312,7 @@
                     border-width: thin; border-color: lightblue; padding: 5px; margin-bottom: 10px;">
                     <div class="card-body text-success">
                       <h5 class="card-title" style="margin: 8px 0px 8px 10px;">$10
-                        <a href="#" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
+                        <a href="my-profile.html" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
                       </h5>
                     </div>
                   </div>
@@ -322,7 +322,7 @@
                     border-width: thin; border-color: lightblue; padding: 5px; margin-bottom: 10px;">
                     <div class="card-body text-success">
                       <h5 class="card-title" style="margin: 8px 0px 8px 10px;">$20
-                        <a href="#" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
+                        <a href="my-profile.html" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
                       </h5>
                     </div>
                   </div>
@@ -332,7 +332,7 @@
                     border-width: thin; border-color: lightblue; padding: 5px; margin-bottom: 10px;">
                     <div class="card-body text-success">
                       <h5 class="card-title" style="margin: 8px 0px 8px 10px;">$50
-                        <a href="#" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
+                        <a href="my-profile.html" class="btn btn-primary pull-right" style="margin-top: -6px;">Donate</a>
                       </h5>
                     </div>
                   </div>
