--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -221,9 +221,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12 animal">
               <div class="single-blog">
                 <div class="single-blog-img">
-                  <a >
-                      <img src="img/blog/Animals.png" alt="">
-                    </a>
+                      <img style="height:250px" src="img/blog/Animals.png" alt="">
                 </div>
                 <div class="blog-meta">
                   <span class="comments-type">
@@ -231,7 +229,7 @@
                       <a href="#">50,000</a>
                     </span>
                   <span class="date-type">
-                      <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
+                      <i class="fa fa-calendar"></i>2018-03-05 / 09:10:16
                     </span>
                 </div>
                 <div class="blog-text">
@@ -256,9 +254,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12 disability">
                 <div class="single-blog">
                   <div class="single-blog-img">
-                    <a >
-                        <img src="img/blog/Disability.jpg" alt="">
-                      </a>
+                      <img style="height:250px" src="img/blog/Disability.jpg" alt="">
                   </div>
                   <div class="blog-meta">
                     <span class="comments-type">
@@ -266,7 +262,7 @@
                         <a href="#">50,000</a>
                       </span>
                     <span class="date-type">
-                        <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
+                        <i class="fa fa-calendar"></i>2018-08-05 / 09:10:16
                       </span>
                   </div>
                   <div class="blog-text">
@@ -291,9 +287,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12 education">
                 <div class="single-blog">
                   <div class="single-blog-img">
-                    <a href="blog-details.html">
-                        <img src="img/blog/Education.jpg" alt="">
-                      </a>
+                        <img style="height:250px" src="img/blog/Education.jpg" alt="" href="blog-details.html">
                   </div>
                   <div class="blog-meta">
                     <span class="comments-type">
