--- a/donation-web/index.html
+++ b/donation-web/index.html
@@ -225,11 +225,12 @@
                 </div>
                 <div class="blog-meta">
                   <span class="comments-type">
+                      Target:
                       <i class="glyphicon glyphicon-usd small"></i>
-                      <a href="#">50,000</a>
+                      <a href="#">100,000</a>
                     </span>
                   <span class="date-type">
-                      <i class="fa fa-calendar"></i>2018-03-05 / 09:10:16
+                      <i class="fa fa-calendar"></i>Due: 2018-11-15 
                     </span>
                 </div>
                 <div class="blog-text">
@@ -237,7 +238,7 @@
                       <a >Animal Project</a>
                     </h4>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                   </div>
                   <p>
                     Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
@@ -258,11 +259,12 @@
                   </div>
                   <div class="blog-meta">
                     <span class="comments-type">
+                        Target: 
                         <i class="glyphicon glyphicon-usd small"></i>
-                        <a href="#">50,000</a>
+                        <a href="#">25,000</a>
                       </span>
                     <span class="date-type">
-                        <i class="fa fa-calendar"></i>2018-08-05 / 09:10:16
+                        <i class="fa fa-calendar"></i>Due: 2018-11-31 
                       </span>
                   </div>
                   <div class="blog-text">
@@ -270,7 +272,7 @@
                         <a >Disability Project</a>
                     </h4>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45%</div>
                     </div>
                     <p>
                       Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
@@ -291,11 +293,12 @@
                   </div>
                   <div class="blog-meta">
                     <span class="comments-type">
+                        Target: 
                         <i class="glyphicon glyphicon-usd small"></i>
                         <a href="#">50,000</a>
                       </span>
                     <span class="date-type">
-                        <i class="fa fa-calendar"></i>2019-03-05 / 09:10:16
+                        <i class="fa fa-calendar"></i>Due: 2018-11-31 
                       </span>
                   </div>
                   <div class="blog-text">
@@ -303,7 +306,7 @@
                         <a href="blog-details.html">Education Project</a>
                     </h4>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 24%" aria-valuenow="24" aria-valuemin="0" aria-valuemax="100">24%</div>
                     </div>
                     <p>
                       Lorem ipsum dolor sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.sit amet conse adipis elit Assumenda repud eum veniam optio modi sit explicabo nisi magnam quibusdam.
@@ -329,7 +332,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>About TRANSAC</h2>
+            <h2>About TRANSACT</h2>
           </div>
         </div>
       </div>
@@ -674,7 +677,7 @@
                 <i class="fa fa-envelope-o"></i>
                 <p>
                   Email: info@example.com<br>
-                  <span>Web: www.TRANSAC.com</span>
+                  <span>Web: www.TRANSACT.com</span>
                 </p>
               </div>
             </div>
@@ -805,18 +808,10 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>TRANSAC</strong>. All Rights Reserved
+                &copy; Copyright <strong>TRANSACT</strong>. All Rights Reserved
               </p>
             </div>
-            <div class="credits">
-              <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-              -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
+
           </div>
         </div>
       </div>
