--- a/donation-web/blog-ongoing-details.html
+++ b/donation-web/blog-ongoing-details.html
@@ -130,29 +130,17 @@
                             <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="active">
-                                        <a href="index.html">Home</a>
+                                    <a class="page-scroll" href="index.html#home">Home</a>
                                     </li>
-                                    <!-- <li>
-                    <a class="page-scroll" href="#about">About</a>
-                  </li> -->
-                                    <!--    <li>
-                    <a class="page-scroll" href="#services">Services</a>
-                  </li>t
-                  <li>
-                    <a class="page-scroll" href="#team">Team</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#blog">Blog</a>
-                  </li> -->
                                     <li>
-                                        <a href="my-profile.html">My Profile</a>
+                                    <a class="page-scroll" href="index.html#about">About</a>
                                     </li>
-                                    <!-- <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                  </li> -->
+                                    <li>
+                                    <a href="my-profile.html">My Profile</a>
+                                    </li>
+                                    <li>
+                                    <a class="page-scroll" href="index.html#contact">Contact</a>
+                                    </li>
                                 </ul>
                             </div>
                             <!-- navbar-collapse -->
@@ -411,13 +399,13 @@
                             <h4>Contact Us</h4>
                             <ul>
                                 <li>
-                                    <a href="#">Organization: SG Global</a>
+                                    <a href="#">Organization: NUS Charity</a>
                                 </li>
                                 <li>
                                     <a href="#">Phone: 8888 1234</a>
                                 </li>
                                 <li>
-                                    <a href="#">Email: contact@sgglobal.com</a>
+                                    <a href="#">Email: contact@nuscharity.com</a>
                                 </li>
                                 <li>
                                     <a href="#">Address: Prince George's Park, NUS</a>
@@ -533,17 +521,8 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
+                                &copy; Copyright <strong>TRANSACT</strong>. All Rights Reserved
                             </p>
-                        </div>
-                        <div class="credits">
-                            <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-              -->
-                            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                         </div>
                     </div>
                 </div>
