--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -169,27 +169,15 @@
                                     <li >
                                         <a href=index.html>Home</a>
                                     </li>
-                                    <!-- <li>
-                                        <a class="page-scroll" href="#about">About</a>
-                                    </li> -->
-                               <!--      <li>
-                                        <a class="page-scroll" href="#services">Services</a>
-                                    </li>
                                     <li>
-                                        <a class="page-scroll" href="#team">Team</a>
-                                    </li>
-                                    <li>
-                                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a class="page-scroll" href="#blog">Blog</a>
-                                    </li> -->
+                                        <a class="page-scroll" href="index.html#about">About</a>
+                                    </li> 
                                     <li class="active">
                                         <a href="my-profile.html">My Profile</a>
                                     </li>
-                                    <!-- <li>
-                                        <a class="page-scroll" href="#contact">Contact</a>
-                                    </li> -->
+                                    <li>
+                                        <a class="page-scroll" href="index.html#contact">Contact</a>
+                                    </li> 
 
                                 </ul>
                             </div>
@@ -254,11 +242,15 @@
                                             </h4>
                                             <div >
                                                 <span class="comments-type">
+                                                        Target:
                                                         <i class="glyphicon glyphicon-usd small"></i>
-                                                        <a href="#">Fund Target: 50,000</a>
+                                                        <a href="#"> 100,000</a>
                                                     </span>
                                                 <span class="date-type">
-                                                    <i class="fa fa-calendar"></i> Fundraising deadline: 2019-03-05 
+                                                     Due: 2018-11-15 
+                                                </span>
+                                                <span class="date-type">
+                                                        <i class="fa fa-calendar"></i> Project Duration: 2019-02-01 to 2019-06-30
                                                 </span>
                                             </div>
                                             
@@ -279,11 +271,15 @@
                                             </h4>
                                             <div >
                                                 <span class="comments-type">
+                                                        Target:
                                                         <i class="glyphicon glyphicon-usd small"></i>
-                                                        <a href="#">Fund Target: 100,000</a>
+                                                        <a href="#">50,000</a>
                                                     </span>
                                                 <span class="date-type">
-                                                    <i class="fa fa-calendar"></i> Fundraising deadline: 2019-03-05 
+                                                    Due: 2018-08-20     
+                                                </span>
+                                                <span class="date-type">
+                                                        <i class="fa fa-calendar"></i> Project Duration: 2018-10-01 to 2019-06-30
                                                 </span>
                                             </div>
                                             
@@ -315,7 +311,7 @@
                     </div>
                     <div class="single-blog-page" style=" border-style: solid; 
                     border-width: thin; border-color: lightblue; padding: 15px;">
-                        <h3 style="margin:0">Save Wilds in Africa!</h3>
+                        <h3 style="margin:0">Save Wilds in Africa</h3>
                         <div class="progress" style="margin-bottom: 2px; margin-top: 20px">
                             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 24%"
                                 aria-valuenow="24" aria-valuemin="0" aria-valuemax="100">24%</div>
@@ -424,18 +420,10 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright <strong>TRANSAC</strong>. All Rights Reserved
+                                &copy; Copyright <strong>TRANSACT</strong>. All Rights Reserved
                             </p>
                         </div>
-                        <div class="credits">
-                            <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-              -->
-                            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                        </div>
+
                     </div>
                 </div>
             </div>
