--- a/donation-web/my-profile.html
+++ b/donation-web/my-profile.html
@@ -216,25 +216,40 @@
                             <div class="awesome-project-1 fix">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="awesome-menu ">
-                                    <ul class="project-menu">
-                                        <li>
-                                        <a href="#" class="active" data-filter="*">All</a>
-                                        </li>
-                                        <li>
-                                        <a href="#" data-filter=".animal">Animal Welfare</a>
-                                        </li>
-                                        <li>
-                                        <a href="#" data-filter=".disability">Disability</a>
-                                        </li>
-                                        <li>
-                                        <a href="#" data-filter=".education">Education</a>
-                                        </li>
-                                    </ul>
+                                        <ul class="project-menu">
+                                            <li>
+                                            <a href="#" class="active" data-filter="*" >All</a>
+                                            </li>
+                                            <li>
+                                            <a href="#" data-filter=".project" >Project Ongoing
+                                            </a>
+                                            </li>
+                                            <li>
+                                            <a href="#" data-filter=".donation" >Donation Ongoing</a>
+                                            </li>
+                                        </ul>
                                     </div>
+                                    <!-- <div class="awesome-menu ">
+                                        <ul class="project-menu">
+                                            <li>
+                                            <a href="#" class="active" data-filter="*">All</a>
+                                            </li>
+                                            <li>
+                                            <a href="#" data-filter=".animal">Animal Welfare</a>
+                                            </li>
+                                            <li>
+                                            <a href="#" data-filter=".disability">Disability</a>
+                                            </li>
+                                            <li>
+                                            <a href="#" data-filter=".education">Education</a>
+                                            </li>
+                                        </ul>
+                                    </div> -->
+
                                 </div>
                             </div>
                             <div class="awesome-project-content">
-                                    <div class="single-blog animal" style=" border-style: solid; 
+                                    <div class="single-blog animal donation" style=" border-style: solid; 
                                     border-width: thin; border-color: lightblue; padding: 15px; width: -webkit-fill-available;">
                                         <div class="blog-text">
                                             <h4>
@@ -263,7 +278,7 @@
                                             </p> -->
                                         </div>
                                     </div>
-                                    <div class="single-blog education" style=" border-style: solid; 
+                                    <div class="single-blog education project" style=" border-style: solid; 
                                     border-width: thin; border-color: lightblue; padding: 15px; width: -webkit-fill-available;">
                                         <div class="blog-text">
                                             <h4>
